--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,11 @@ prettyplease = "0.2.20"
 syn = { version = "2.0.89", features = ["printing"] }
 futures = "0.3.31"
 
-wasmparser = "0.224.0"
-wasm-encoder = "0.224.0"
-wasm-metadata = "0.224.0"
-wit-parser = "0.224.0"
-wit-component = "0.224.0"
+wasmparser = { git = "https://github.com/badeend/wasm-tools", branch = "get-set" }
+wasm-encoder = { git = "https://github.com/badeend/wasm-tools", branch = "get-set" }
+wasm-metadata = { git = "https://github.com/badeend/wasm-tools", branch = "get-set" }
+wit-parser = { git = "https://github.com/badeend/wasm-tools", branch = "get-set" }
+wit-component = { git = "https://github.com/badeend/wasm-tools", branch = "get-set" }
 
 wit-bindgen-core = { path = 'crates/core', version = '0.38.0' }
 wit-bindgen-c = { path = 'crates/c', version = '0.38.0' }
